k8s/ollama-cuda/ollama-cuda-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: ollama-cuda
    avena.engine: cuda
  name: ollama-cuda
  namespace: private-gpt
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: ollama-cuda
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: ollama-cuda
    spec:
      containers:
        - image: ollama/ollama:latest
          name: ollama-cuda
      restartPolicy: Always
