k8s/ollama-cuda/ollama-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert --profile ollama-cuda
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: ollama
  name: ollama
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: ollama
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert --profile ollama-cuda
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: ollama
    spec:
      containers:
        - args:
            - --providers.file.filename=/etc/router.yml
            - --log.level=ERROR
            - --api.insecure=true
            - --providers.docker=true
            - --providers.docker.exposedbydefault=false
            - --entrypoints.web.address=:11434
          image: traefik:v2.10
          name: ollama
          ports:
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - mountPath: /etc/router.yml
              name: ollama-cm1
              readOnly: true
              subPath: router.yml
      restartPolicy: Always
      volumes:
        - configMap:
            items:
              - key: router.yml
                path: router.yml
            name: ollama-cm1
          name: ollama-cm1
