k8s/ollama-cuda/private-gpt-ollama-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: private-gpt-ollama
    avena.engine: cuda
  name: private-gpt-ollama
  namespace: private-gpt
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: private-gpt-ollama
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: private-gpt
        io.kompose.service: private-gpt-ollama
    spec:
      containers:
        - env:
            - name: HF_TOKEN
              valueFrom:
                secretKeyRef:
                  name: hf-token
                  key: HF_TOKEN
            - name: PGPT_EMBED_MODE
              value: ollama
            - name: PGPT_MODE
              value: ollama
            - name: PGPT_OLLAMA_API_BASE
              value: http://ollama:11434
            - name: PGPT_PROFILES
              value: docker
            - name: PORT
              value: "8001"
            - name: LOCAL_INGESTION_ENABLED
              value: "true"
          image: zylonai/private-gpt:0.6.2-ollama
          name: private-gpt-ollama
          ports:
            - containerPort: 8001
              protocol: TCP
          volumeMounts:
            - mountPath: /home/worker/app/local_data
              name: private-gpt-local-data-pvc
            - mountPath: /home/worker/app/models
              name: private-gpt-models-pvc
      restartPolicy: Always
      volumes:
        - name: private-gpt-local-data-pvc
          persistentVolumeClaim:
            claimName: private-gpt-local-data-pvc
        - name: private-gpt-models-pvc
          persistentVolumeClaim:
            claimName: private-gpt-models-pvc
