k8s/ollama-cuda/ollama-cuda-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: ollama-cuda
  name: ollama-cuda
  namespace: private-gpt
spec:
  ports:
    - name: "ollama"
      port: 11434
      targetPort: 11434
  selector:
    io.kompose.service: ollama-cuda
