k8s/ollama-cuda/ollama-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert --profile ollama-cuda
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: ollama
  name: ollama
spec:
  ports:
    - name: "8081"
      port: 8081
      targetPort: 8080
  selector:
    io.kompose.service: ollama
