k8s/ollama-cuda/ollama-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: ollama
  name: ollama
  namespace: private-gpt
spec:
  ports:
    - name: "traefik"
      port: 8080
      targetPort: 8080
    - name: "ollama"
      port: 11434
      targetPort: 11434
  selector:
    io.kompose.service: ollama
