k8s/ollama-cuda/private-gpt-ollama-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert --profile ollama-cuda
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: private-gpt-ollama
  name: private-gpt-ollama
  namespace: private-gpt
spec:
  ports:
    - name: "8001"
      port: 8001
      targetPort: 8001
  selector:
    io.kompose.service: private-gpt-ollama
