k8s/ollama-cuda/private-gpt-ollama-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: private-gpt-ollama
  name: private-gpt-ollama
  namespace: private-gpt
spec:
  ports:
    - name: "8001"
      port: 8001
      targetPort: 8001
  selector:
    io.kompose.service: private-gpt-ollama
